# stock-logistics-workflow

./: README.md
delivery_procurement_group_carrier/i18n/: fi.po
delivery_total_weight_from_packaging/i18n/: fr.po
product_expiry_simple/: __manifest__.py
product_expiry_simple/i18n/: fi.po
sale_order_global_stock_route/: README.rst
sale_order_global_stock_route/static/description/: index.html
setup/_metapackage/: VERSION.txt  pyproject.toml  setup.py
stock_no_negative/i18n/: fi.po
stock_owner_restriction/: README.rst
stock_owner_restriction/static/description/: index.html
stock_owner_restriction/tests/: test_stock_owner_restriction.py
stock_partner_delivery_window/i18n/: fr.po
stock_picking_auto_create_lot/: README.rst
stock_picking_auto_create_lot/static/description/: index.html
stock_picking_auto_create_lot/views/: product_views.xml
stock_picking_group_by_partner_by_carrier_by_date/i18n/: fr.po
stock_picking_invoice_link/: README.rst
stock_picking_invoice_link/static/description/: index.html
stock_picking_restrict_cancel_printed/: __manifest__.py
stock_picking_restrict_cancel_printed/tests/: test_stock_picking_restrict_cancel_printed.py
stock_picking_show_return/: README.rst
stock_picking_show_return/static/description/: index.html
stock_picking_whole_scrap/: README.rst
stock_picking_whole_scrap/static/description/: index.html
stock_quant_package_dimension_total_weight_from_packaging/i18n/: fr.po
stock_restrict_lot/: README.rst  __manifest__.py
stock_restrict_lot/static/description/: index.html
